<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ActorInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/item_photo_individual_fragment"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_margin="40dp"
            android:contentDescription="@string/item_list_photo_description"/>

        <TextView
            android:id="@+id/item_full_name_individual_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/item_list_full_name"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/item_date_of_born_individual_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/item_list_date_of_born"
            android:textSize="25sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>