<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddActorFragment">

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:id="@+id/photo_btn"
            android:layout_width="200sp"
            android:layout_height="200dp"
            android:background="@color/gray"
            android:contentDescription="@string/item_list_photo_description" />

        <EditText
            android:id="@+id/user_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_full_name"
            android:inputType="textPersonName"
            android:textColor="@color/gray"
            android:textSize="20sp"
            android:autofillHints="" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/date_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5sp">
            <TextView
                android:id="@+id/date_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_date"
                android:textSize="20sp"
                android:textColor="@color/gray"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/commit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_add_actor"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>